<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundBodyColor"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_digizen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/digidzen"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <EditText
        android:id="@+id/et_display"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/displayColor"
        android:fontFamily="@font/display_digit"
        android:gravity="end|center"
        android:inputType="textMultiLine"
        android:maxLines="6"
        android:paddingRight="8dp"
        android:hint="@string/_0"
        android:textColorHint="@color/displayTextColor"
        android:textColor="@color/displayTextColor"
        android:textSize="44sp"
        android:focusable="true"
        android:focusableInTouchMode="false"
        app:layout_constraintBottom_toTopOf="@+id/tv_ac"
        app:layout_constraintEnd_toEndOf="@+id/tv_m_del_ch"
        app:layout_constraintStart_toStartOf="@+id/tv_ac"
        app:layout_constraintTop_toBottomOf="@+id/tv_digizen"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_ce"
        style="@style/buttonStyle"
        android:text="@string/tb_text_mc"
        app:layout_constraintBottom_toBottomOf="@+id/tv_ac"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_m_plus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_ac"
        app:layout_constraintTop_toTopOf="@+id/tv_ac" />

    <TextView
        android:id="@+id/tv_m_plus"
        style="@style/buttonStyle"
        android:text="@string/tb_text_m_plus"
        app:layout_constraintBottom_toBottomOf="@+id/tv_ce"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_m_minus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_ce"
        app:layout_constraintTop_toTopOf="@+id/tv_ce"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tv_m_minus"
        style="@style/buttonStyle"
        android:text="@string/tb_text_minus"
        app:layout_constraintBottom_toBottomOf="@+id/tv_m_plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_m_del_ch"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_m_plus"
        app:layout_constraintTop_toTopOf="@+id/tv_m_plus" />


    <TextView
        android:id="@+id/percent"
        style="@style/buttonStyle"
        android:text="@string/tb_text_perc"
        app:layout_constraintBottom_toTopOf="@+id/tv_equally"
        app:layout_constraintEnd_toStartOf="@+id/tv_1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.98" />

    <TextView
        android:id="@+id/tv_m_del_ch"
        style="@style/buttonStyle"
        android:text="@string/tb_text_del"
        app:layout_constraintBottom_toBottomOf="@+id/tv_m_minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_m_minus"
        app:layout_constraintTop_toTopOf="@+id/tv_m_minus" />

    <TextView
        android:id="@+id/tv_ac"
        style="@style/buttonOrangeStyle"
        android:text="@string/tb_text_ac"
        app:layout_constraintBottom_toTopOf="@+id/tv_left_scobka"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_ce"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.98" />

    <TextView
        android:id="@+id/tv_7"
        style="@style/buttonStyle"
        android:text="@string/tb_text_7"
        app:layout_constraintBottom_toBottomOf="@+id/tv_left_scobka"
        app:layout_constraintEnd_toStartOf="@+id/tv_8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_left_scobka"
        app:layout_constraintTop_toTopOf="@+id/tv_left_scobka" />

    <TextView
        android:id="@+id/tv_8"
        style="@style/buttonStyle"
        android:text="@string/tb_text_8"
        app:layout_constraintBottom_toBottomOf="@+id/tv_7"
        app:layout_constraintEnd_toStartOf="@+id/tv_9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_7"
        app:layout_constraintTop_toTopOf="@+id/tv_7" />

    <TextView
        android:id="@+id/tv_9"
        style="@style/buttonStyle"
        android:text="@string/tb_text_9"
        app:layout_constraintBottom_toBottomOf="@+id/tv_8"
        app:layout_constraintEnd_toStartOf="@+id/tv_div"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_8"
        app:layout_constraintTop_toTopOf="@+id/tv_8" />


    <TextView
        android:id="@+id/tv_div"
        style="@style/buttonStyle"
        android:text="@string/tb_text_div"
        app:layout_constraintBottom_toBottomOf="@+id/tv_9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_9"
        app:layout_constraintTop_toTopOf="@+id/tv_9" />

    <TextView
        android:id="@+id/tv_left_scobka"
        style="@style/buttonStyle"
        android:text="@string/tb_text_left_scoba"
        app:layout_constraintBottom_toTopOf="@+id/tv_righ_skobka"
        app:layout_constraintEnd_toStartOf="@+id/tv_7"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.98" />

    <TextView
        android:id="@+id/tv_4"
        style="@style/buttonStyle"
        android:text="@string/tb_text_4"
        app:layout_constraintBottom_toBottomOf="@+id/tv_righ_skobka"
        app:layout_constraintEnd_toStartOf="@+id/tv_5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_righ_skobka"
        app:layout_constraintTop_toTopOf="@+id/tv_righ_skobka" />

    <TextView
        android:id="@+id/tv_5"
        style="@style/buttonStyle"
        android:text="@string/tb_text_5"
        app:layout_constraintBottom_toBottomOf="@+id/tv_4"
        app:layout_constraintEnd_toStartOf="@+id/tv_6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_4"
        app:layout_constraintTop_toTopOf="@+id/tv_4" />

    <TextView
        android:id="@+id/tv_6"
        style="@style/buttonStyle"
        android:text="@string/tb_text_6"
        app:layout_constraintBottom_toBottomOf="@+id/tv_5"
        app:layout_constraintEnd_toStartOf="@+id/tv_multi"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_5"
        app:layout_constraintTop_toTopOf="@+id/tv_5" />

    <TextView
        android:id="@+id/tv_multi"
        style="@style/buttonStyle"
        android:text="@string/tb_text_mult"
        app:layout_constraintBottom_toBottomOf="@+id/tv_6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_6"
        app:layout_constraintTop_toTopOf="@+id/tv_6" />

    <TextView
        android:id="@+id/tv_righ_skobka"
        style="@style/buttonStyle"
        android:text="@string/tb_text_right_scobka"
        app:layout_constraintBottom_toTopOf="@+id/percent"
        app:layout_constraintEnd_toStartOf="@+id/tv_4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.98" />

    <TextView
        android:id="@+id/tv_1"
        style="@style/buttonStyle"
        android:text="@string/tb_text_1"
        app:layout_constraintBottom_toBottomOf="@+id/percent"
        app:layout_constraintEnd_toStartOf="@+id/tv_2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/percent"
        app:layout_constraintTop_toTopOf="@+id/percent" />

    <TextView
        android:id="@+id/tv_2"
        style="@style/buttonStyle"
        android:text="@string/tb_text_2"
        app:layout_constraintBottom_toBottomOf="@+id/tv_1"
        app:layout_constraintEnd_toStartOf="@+id/tv_3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_1"
        app:layout_constraintTop_toTopOf="@+id/tv_1" />

    <TextView
        android:id="@+id/tv_3"
        style="@style/buttonStyle"
        android:text="@string/tb_text_3"
        app:layout_constraintBottom_toBottomOf="@+id/tv_2"
        app:layout_constraintEnd_toStartOf="@+id/tv_sub"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_2"
        app:layout_constraintTop_toTopOf="@+id/tv_2" />

    <TextView
        android:id="@+id/tv_sub"
        style="@style/buttonStyle"
        android:text="@string/tb_text_sub"
        app:layout_constraintBottom_toBottomOf="@+id/tv_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_3"
        app:layout_constraintTop_toTopOf="@+id/tv_3" />

    <TextView
        android:id="@+id/tv_equally"
        style="@style/buttonOrangeStyle"
        android:text="@string/tb_text_equally"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_0"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_0"
        style="@style/buttonStyle"
        android:text="@string/tb_text_0"
        app:layout_constraintBottom_toBottomOf="@+id/tv_equally"
        app:layout_constraintEnd_toStartOf="@+id/tv_00"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_equally" />

    <TextView
        android:id="@+id/tv_00"
        style="@style/buttonStyle"
        android:text="@string/tb_text_00"
        app:layout_constraintBottom_toBottomOf="@+id/tv_0"
        app:layout_constraintEnd_toStartOf="@+id/tv_point"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_0" />

    <TextView
        android:id="@+id/tv_point"
        style="@style/buttonStyle"
        android:text="@string/tb_text_point"
        app:layout_constraintBottom_toBottomOf="@+id/tv_00"
        app:layout_constraintEnd_toStartOf="@+id/tv_add"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_00" />

    <TextView
        android:id="@+id/tv_add"
        style="@style/buttonStyle"
        android:text="@string/tb_text_add"
        app:layout_constraintBottom_toBottomOf="@+id/tv_point"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_point" />


</androidx.constraintlayout.widget.ConstraintLayout>